syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetFullName (SampleRequest) returns (SampleResponse);
}

message SampleRequest {
	string firstName = 1;
	string lastName = 2;
}

message SampleResponse {
	string fullName = 1;
}